--- a/spring-jobeet/.project
+++ b/spring-jobeet/.project
@@ -37,6 +37,7 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>com.springsource.sts.roo.core.nature</nature>
 		<nature>org.springframework.ide.eclipse.core.springnature</nature>
 		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
 		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
