--- a/spring-jobeet/src/main/webapp/WEB-INF/web.xml
+++ b/spring-jobeet/src/main/webapp/WEB-INF/web.xml
@@ -6,14 +6,14 @@
  id="WebApp_ID" version="2.5">
   <display-name>Jobbet</display-name>
   
+  <welcome-file-list>
+  <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+  
   <!-- The front controller of this Spring Web application, responsible for handling all application requests -->
 	<servlet>
 		<servlet-name>spring-jobeet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/contextConfigLocation.xml</param-value>
-		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
