--- a/spring-jobeet/src/main/resources/log4j.properties
+++ b/spring-jobeet/src/main/resources/log4j.properties
@@ -1,16 +1,30 @@
+# Root logger option
+#log4j.rootLogger=debug, file, stdout, stderr
+log4j.rootLogger=file, stdout, stderr
+
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=C:\\loging.log
-log4j.appender.file.MaxFileSize=1MB
+log4j.appender.file.DatePattern='_'yyyy-MM-dd'.log'
+log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+log4j.appender.file.layout.ConversionPattern=%d %5p %c{1}:%L - %m%n
  
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
- 
-# Root logger option
-log4j.rootLogger=debug, file, stdout
+log4j.appender.stdout.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.stdout.filter.filter1.levelMin=TRACE
+log4j.appender.stdout.filter.filter1.levelMax=INFO
+
+# configure stderr
+# set the conversion pattern of stdout
+# Print the date in ISO 8601 format
+log4j.appender.stderr = org.apache.log4j.ConsoleAppender
+log4j.appender.stderr.Threshold = WARN
+log4j.appender.stderr.Target   = System.err
+log4j.appender.stderr.layout = org.apache.log4j.PatternLayout
+log4j.appender.stderr.layout.ConversionPattern = %-5p %d [%t][%F:%L] : %m%n
