Se monta la plantilla de index

--- a/spring-jobeet/pom.xml
+++ b/spring-jobeet/pom.xml
@@ -83,9 +83,35 @@
  	<artifactId>mysql-connector-java</artifactId>
  	<version>5.1.30</version>
  </dependency>
+ <dependency>
+ 	<groupId>org.apache.tiles</groupId>
+ 	<artifactId>tiles-core</artifactId>
+ 	<version>${tiles.version}</version>
+ </dependency>
+ <dependency>
+ 	<groupId>org.apache.tiles</groupId>
+ 	<artifactId>tiles-jsp</artifactId>
+ 	<version>${tiles.version}</version>
+ </dependency>
+ <dependency>
+ 	<groupId>org.apache.tiles</groupId>
+ 	<artifactId>tiles-servlet</artifactId>
+ 	<version>${tiles.version}</version>
+ </dependency>
+ <dependency>
+ 	<groupId>org.apache.tiles</groupId>
+ 	<artifactId>tiles-template</artifactId>
+ 	<version>${tiles.version}</version>
+ </dependency>
+ <dependency>
+ 	<groupId>org.apache.tiles</groupId>
+ 	<artifactId>tiles-el</artifactId>
+ 	<version>${tiles.version}</version>
+ </dependency>
  </dependencies>
  <properties>
- <org.springframework.version>3.2.1.RELEASE</org.springframework.version>
+ <org.springframework.version>4.0.0.RELEASE</org.springframework.version>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+ <tiles.version>2.2.2</tiles.version>
  </properties>
 </project>
