Se añade modelo de categoria, DAO y Controlador

--- a/spring-jobeet/src/main/webapp/WEB-INF/web.xml
+++ b/spring-jobeet/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,7 @@
 	    <url-pattern>*.jpg</url-pattern>
 	    <url-pattern>*.js</url-pattern>
 	    <url-pattern>*.css</url-pattern>
+	    <url-pattern>*.gif</url-pattern>
 	</servlet-mapping>
   
 </web-app>
