--- a/spring-jobeet/pom.xml
+++ b/spring-jobeet/pom.xml
@@ -118,6 +118,16 @@
 			<artifactId>tiles-el</artifactId>
 			<version>${tiles.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<org.springframework.version>4.0.0.RELEASE</org.springframework.version>
