--- a/spring-jobeet/pom.xml
+++ b/spring-jobeet/pom.xml
@@ -24,6 +24,27 @@
 					<path>/spring-jobeet</path>
 				</configuration>
 			</plugin>
+			<plugins>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco.version}</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>report</id>
+							<phase>prepare-package</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
 		</plugins>
 	</build>
 	<dependencies>
