--- a/spring-jobeet/pom.xml
+++ b/spring-jobeet/pom.xml
@@ -27,7 +27,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco.version}</version>
+				<version>1.15</version>
 				<executions>
 					<execution>
 						<goals>
