--- a/spring-jobeet/src/main/resources/log4j.properties
+++ b/spring-jobeet/src/main/resources/log4j.properties
@@ -1,19 +1,34 @@
 # Root logger option
 #log4j.rootLogger=debug, file, stdout, stderr
-log4j.rootLogger=file, stdout, stderr
+log4j.rootLogger= warm, stdout, stderr, file_info, file_debug
 
 # Direct log messages to a log file
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=C:\\loging.log
-log4j.appender.file.DatePattern='_'yyyy-MM-dd'.log'
-log4j.appender.file.MaxFileSize=10MB
-log4j.appender.file.MaxBackupIndex=1
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d %5p %c{1}:%L - %m%n
+log4j.appender.file_debug=org.apache.log4j.RollingFileAppender
+log4j.appender.file_debug.File=C:\\logs_webapp\\spring-jobeet_debug.log
+log4j.appender.file_debug.Append=true
+log4j.appender.file_debug.Threshold= DEBUG
+log4j.appender.file_debug.MaxFileSize=10MB
+log4j.appender.file_debug.MaxBackupIndex=1
+log4j.appender.file_debug.layout=org.apache.log4j.PatternLayout
+log4j.appender.file_debug.layout.ConversionPattern=%d %5p %c{1}:%L - %m%n
+log4j.appender.stdout.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.stdout.filter.filter1.levelMin=INFO
+log4j.appender.stdout.filter.filter1.levelMax=DEBUG
+
+# Direct log messages to a log file
+log4j.appender.file_info=org.apache.log4j.RollingFileAppender
+log4j.appender.file_info.File=C:\\logs_webapp\\spring-jobeet_info.log
+log4j.appender.file_info.Append=true
+log4j.appender.file_info.Threshold=INFO
+log4j.appender.file_info.MaxFileSize=10MB
+log4j.appender.file_info.MaxBackupIndex=1
+log4j.appender.file_info.layout=org.apache.log4j.PatternLayout
+log4j.appender.file_info.layout.ConversionPattern=%d %5p %c{1}:%L - %m%n
  
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
-log4j.appender.stdout.Target=System.out
+log4j.appender.stderr.Threshold = WARN
+log4j.appender.stderr.Target   = System.err
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 log4j.appender.stdout.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
