--- a/spring-jobeet/src/main/resources/log4j.properties
+++ b/spring-jobeet/src/main/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.file_debug.MaxBackupIndex=1
 log4j.appender.file_debug.layout=org.apache.log4j.PatternLayout
 log4j.appender.file_debug.layout.ConversionPattern=%d %5p %c{1}:%L - %m%n
 log4j.appender.stdout.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
-log4j.appender.stdout.filter.filter1.levelMin=INFO
+log4j.appender.stdout.filter.filter1.levelMin=DEBUG
 log4j.appender.stdout.filter.filter1.levelMax=DEBUG
 
 # Direct log messages to a log file
