--- a/spring-jobeet/src/main/resources/log4j.properties
+++ b/spring-jobeet/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 # Root logger option
 #log4j.rootLogger=debug, file, stdout, stderr
+#log4j.rootLogger= warm, stdout, stderr, file_info, file_debug
 log4j.rootLogger= warm, stdout, stderr, file_info, file_debug
 
 # Direct log messages to a log file
@@ -27,8 +28,6 @@ log4j.appender.file_info.layout.ConversionPattern=%d %5p %c{1}:%L - %m%n
  
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
-log4j.appender.stderr.Threshold = WARN
-log4j.appender.stderr.Target   = System.err
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 log4j.appender.stdout.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
