--- a/spring-jobeet/pom.xml
+++ b/spring-jobeet/pom.xml
@@ -21,7 +21,7 @@
 				<configuration>
 					<url>http://localhost:9080/manager/text</url>
 					<server>TomcatServer</server>
-					<path>/spring-jobeet</path>
+					<path>/spring-jobeet</path> 
 					<update>true</update>
 				</configuration>
 			</plugin>
@@ -146,6 +146,11 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
 		</dependency>
 	</dependencies>
 	<properties>
