Se añade ajax, publicación y mensajes emergentes

--- a/spring-jobeet/src/main/resources/appConfig.properties
+++ b/spring-jobeet/src/main/resources/appConfig.properties
@@ -2,4 +2,4 @@ app.max_trabajos_index=10
 app.max_trabajos_categoria=20
 app.dias_activos=30
 app.dias_advertencia_expiracion=5
-app.ruta_ficheros_logos=C:\\Users\\msantosa\\Downloads\\springsource\\vfabric-tc-server-developer-2.7.2.RELEASE\\tomcat-7.0.30.A.RELEASE
+app.ruta_ficheros_logos=C:\\Program Files\\Apache Software Foundation\\Tomcat 7.0\\webapps\\uploads\\logos
