--- a/spring-jobeet/src/main/webapp/WEB-INF/web.xml
+++ b/spring-jobeet/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xmlns="http://java.sun.com/xml/ns/javaee"
- xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
- xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
- id="WebApp_ID" version="2.5">
-  <display-name>Jobbet</display-name>
-  
-  <welcome-file-list>
-  <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
-  
-  <!-- The front controller of this Spring Web application, responsible for handling all application requests -->
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	id="WebApp_ID" version="2.5">
+	<display-name>Jobbet</display-name>
+
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+
+	<!-- The front controller of this Spring Web application, responsible for 
+		handling all application requests -->
 	<servlet>
 		<servlet-name>spring-jobeet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -22,15 +22,39 @@
 		<servlet-name>spring-jobeet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
-	
+
+
 	<servlet-mapping>
-	    <servlet-name>default</servlet-name>
-	    <url-pattern>*.png</url-pattern>
-	    <url-pattern>*.jpg</url-pattern>
-	    <url-pattern>*.js</url-pattern>
-	    <url-pattern>*.css</url-pattern>
-	    <url-pattern>*.gif</url-pattern>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.png</url-pattern>
+		<url-pattern>*.jpg</url-pattern>
+		<url-pattern>*.js</url-pattern>
+		<url-pattern>*.css</url-pattern>
+		<url-pattern>*.gif</url-pattern>
 	</servlet-mapping>
-  
+
+	<!-- filtro de Spring security-->
+	<filter>
+	   <filter-name>springSecurityFilterChain</filter-name>
+	   <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+	   <filter-name>springSecurityFilterChain</filter-name>
+	   <url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<!--  Se define el listener que carga el fichero de configuración de spring security -->
+	<context-param>
+	   <param-name>contextConfigLocation</param-name>
+	   <param-value>/WEB-INF/spring-security.xml</param-value>
+	</context-param>
+	
+	<listener>
+	   <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<listener>
+    <listener-class> org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+</listener>
+
 </web-app>
