--- a/spring-jobeet/pom.xml
+++ b/spring-jobeet/pom.xml
@@ -162,6 +162,16 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>3.2.3.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<org.springframework.version>4.0.0.RELEASE</org.springframework.version>
