--- a/spring-jobeet/src/main/webapp/WEB-INF/web.xml
+++ b/spring-jobeet/src/main/webapp/WEB-INF/web.xml
@@ -33,28 +33,43 @@
 		<url-pattern>*.gif</url-pattern>
 	</servlet-mapping>
 
-	<!-- filtro de Spring security-->
+	<!-- filtro de Spring security -->
 	<filter>
-	   <filter-name>springSecurityFilterChain</filter-name>
-	   <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
 	<filter-mapping>
-	   <filter-name>springSecurityFilterChain</filter-name>
-	   <url-pattern>/*</url-pattern>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
-	<!--  Se define el listener que carga el fichero de configuración de spring security -->
+
+	<!-- Se define el listener que carga el fichero de configuración de spring 
+		security -->
 	<context-param>
-	   <param-name>contextConfigLocation</param-name>
-	   <param-value>/WEB-INF/spring-security.xml</param-value>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/spring-security.xml</param-value>
 	</context-param>
-	
+
 	<listener>
-	   <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
+
 	<listener>
-    <listener-class> org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
-</listener>
+		<listener-class>
+			org.springframework.security.web.session.HttpSessionEventPublisher
+		</listener-class>
+	</listener>
+
+	<!-- Páginas de error -->
+	<error-page>
+		<error-code>404</error-code>
+		<location>/404</location>
+	</error-page>
+
+	<error-page>
+		<error-code>500</error-code>
+		<location>/500</location>
+	</error-page>
+
 
 </web-app>
